# wgpu-test

./: .gitignore  emscripten.sh  meson.build  native.sh  readme.md  run.sh  srv.sh  wasm.ini
src/: app.cpp  app.hpp  context.cpp  context.hpp  default_shader.hpp.inc  default_triangle_shader.hpp.inc  m.hpp  main.cpp  main.html  webgpu.cpp  webgpu.hpp  zep.cpp  zep.hpp
src/ghuva/: context.cpp  context.hpp  default_compute_shader.hpp.inc  default_shader.hpp.inc  engine.hpp  implementations.cpp  mesh.hpp  object.cpp  object.hpp  transform.hpp  utils.hpp
src/ghuva/meshes/: pyramid.hpp
src/ghuva/objects/: eel.hpp  ew.hpp
src/ghuva/utils/: aliases.hpp  chrono.hpp  container.hpp  cvt.hpp  dont_forget.hpp  forward.hpp  guarded.hpp  list.hpp  m4.hpp  math.hpp  point.cpp  point.hpp  remove_cvref.hpp  type_name.hpp
src/imgui_widgets/: group_panel.cpp  group_panel.hpp
src/standalone/: aliases.hpp  all.hpp  chrono.hpp  cvt.hpp  dont_forget.hpp  forward.hpp  geometry.cpp  geometry.hpp  math.hpp  remove_cvref.hpp  type_name.hpp
subprojects/: .gitignore  fmt.wrap  glfw3webgpu.wrap  imgui.wrap  rapidobj.wrap  wgpu-cpp.wrap  wgpu-native.wrap  zep.wrap
subprojects/packagefiles/glfw3webgpu/: glfw3webgpu.c  glfw3webgpu.h  meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/rapidobj/: meson.build
subprojects/packagefiles/wgpu-cpp/: meson.build
subprojects/packagefiles/wgpu-native/: meson.build
subprojects/packagefiles/zep/: meson.build
subprojects/packagefiles/zep/include/: config_app.h
